# AI-Agents

./: README.md
CVEE/: .gitignore  README.md  demo.py  requirements.txt  run.py
CVEE/Stock_Recommendation/: .gitignore  README.md
CVEE/Stock_Recommendation/src/stock_recommendation/config/: agents.yaml
CVEE/app/: auth.py
CVEE/supabase/: client.py
Coder/: pyproject.toml
Coder/output/: code_and_output.txt
Coder/src/debater/: crew.py  main.py
Coder/src/debater/config/: agents.yaml  tasks.yaml
Stock_Recommendation/: pyproject.toml
Stock_Recommendation/output/: decision.md  research_report.json  trending_companies.json
Stock_Recommendation/src/stock_recommendation/: crew.py  main.py
full_stack_developer/: README.md  pyproject.toml
full_stack_developer/output/: accounts.py  accounts.py_design.md  test_accounts.py
full_stack_developer/src/full_stack_developer/: crew.py  main.py
full_stack_developer/src/full_stack_developer/config/: agents.yaml
padif/: README.md  pyproject.toml
padif/src/padif/: app.py  config.py  main.py  userInputHandler.py
padif/src/padif/crews/ltxconverter/: ltxconverter.py
padif/src/padif/crews/pdfbuilder/: pdfbuilder.py
padif/src/padif/crews/pdfbuilder/config/: agents.yaml  tasks.yaml
padif/src/padif/utils/: ExtractTextInfoFromPDF.py  FileHandler.py  extract.py
