[project]
name = "stock_recommendation"
version = "0.1.0"
description = "Stock_Recommendation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
stock_recommendation = "stock_recommendation.main:run"
run_crew = "stock_recommendation.main:run"
train = "stock_recommendation.main:train"
replay = "stock_recommendation.main:replay"
test = "stock_recommendation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
