[project]
name = "padif"
version = "0.1.0"
description = "Padif using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0",
]

[project.scripts]
kickoff = "padif.main:kickoff"
run_crew = "padif.main:kickoff"
plot = "padif.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
