[project]
name = "padif"
version = "0.1.0"
description = "Padif using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0",
    "gradio>=5.39.0",
    "groq>=0.30.0",
    "openai>=1.98.0",
    "openai-agents>=0.2.4",
    "openai-sdk>=0.1.0",
    "pdf2image>=1.17.0",
    "pdfservices-sdk>=4.2.0",
]

[project.scripts]
kickoff = "padif.main:kickoff"
run_crew = "padif.main:kickoff"
plot = "padif.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
